--- a/vercel.json
+++ b/vercel.json
@@ -1,31 +1,14 @@
 {
   "version": 2,
   "name": "mazestepper-multiplayer",
-  "builds": [
-    {
-      "src": "ui/**",
-      "use": "@vercel/static"
-    }
-  ],
-  "routes": [
-    {
-      "src": "/(.*)",
-      "dest": "/ui/$1"
-    },
-    {
-      "src": "/",
-      "dest": "/ui/index.html"
-    }
-  ],
-  "headers": [
+  "rewrites": [
     {
       "source": "/(.*)",
-      "headers": [
-        {
-          "key": "Cache-Control",
-          "value": "public, max-age=3600"
-        }
-      ]
+      "destination": "/ui/$1"
+    },
+    {
+      "source": "/",
+      "destination": "/ui/index.html"
     }
   ]
 }
